# k8s-netem

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  requirements.txt  setup.cfg  setup.py  supervisord.conf
etc/: example.json  supervisord.conf  vtt_example01.json  vtt_example02.json  vtt_example03_stop.json
kubernetes/: crd.yaml  deployment.yaml  rbac.yaml  service.yaml  webhook.yaml
kubernetes/example/: deployment.yaml  pod.yaml  profile-builtin.yaml  profile-flexe.yaml  profile-vtt.yaml  profile.yaml
scripts/: create-certs.sh  dev.sh  req.conf  test-mutate.sh
src/flexe/: packet.py  server.py
src/flexe/conf/: server.json
src/flexe/lib/: account.py  configuration.py  networking.py
src/flexe/profiles/: 3g  ethernet  gprs  lte  xDSL
src/k8s_netem/: caller.py  config.py  controller.py  direction.py  filter.py  impairment.py  interface.py  ipset.py  json.py  log.py  match.py  nftables.py  peer.py  profile.py  resource.py  rule.py  run.py  sidecar.py  utils.py  webhook.py
src/k8s_netem/controllers/: builtin.py  flexe.py  flexe_controller.py  script.py  tc.py  vtt.py
src/k8s_netem/flexe/: packet.py  server.py  start.sh
src/k8s_netem/flexe/lib/: account.py  configuration.py  networking.py
src/k8s_netem/flexe/profiles/: 3g  ethernet  lte
src/tc_script/: main.py
