[metadata]
name = k8s-netem
version = 0.1.0
description = Using Linux TC/netem in Kubernetes
long_description = file: README.md
keywords = netem, tc, network, kubernetes
license = Apache 2.0

[options]
package_dir =
    =src
packages = find:
install_requires =
    kubernetes
    flask
    jsonpatch

[options.packages.find]
where=src


[options.entry_points]
console_scripts =
    k8s-netem = k8s_netem.run:main
