[metadata]
name = k8s-netem
version = 0.2.0
description = Cross-pod network-emulation using Linux TC/netem for Kubernetes
long_description = file: README.md
keywords = netem, tc, network, kubernetes
license = Apache 2.0

[options]
package_dir =
    = src
packages = find:
install_requires =
    kubernetes
    flask
    jsonpatch
    inotify
    jsonschema
    tornado
    requests
    websocket
    passlib
    netaddr

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    k8s-netem-sidecar = k8s_netem.sidecar:main
    k8s-netem-webhook = k8s_netem.webhook:main
    tc-script = tc_script.main:main
    flexe-server = flexe.server:main
    flexe-packet = flexe.packet:main
